<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#E2FBFBA6"
    tools:layout_editor_absoluteX="-16dp"
    tools:layout_editor_absoluteY="101dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="225dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="93dp"
        android:background="@drawable/abc_f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        app:layout_constraintVertical_bias="0.125" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="176dp"
        android:layout_marginBottom="57dp"
        android:src="@drawable/abc"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:autofillHints="@string/prompt_email"
        android:background="@color/white"
        android:hint="@string/prompt_email"
        android:textColorHint="#DFDADA"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="140dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#d5defd"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:autofillHints="@string/prompt_email"
        android:background="@color/white"
        android:hint="@string/prompt_name"
        android:textColorHint="#DFDADA"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/prompt_password"
        android:background="@color/white"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:textColorHint="#DFDADA"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />


</androidx.constraintlayout.widget.ConstraintLayout>