<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBA6"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="-16dp"
    tools:layout_editor_absoluteY="101dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="225dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/abc_f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="71dp"
        android:src="@drawable/abc"
        app:layout_constraintBottom_toTopOf="@+id/editText_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="292dp"
        android:backgroundTint="#d5defd"
        android:text="@string/action_log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/prompt_email"
        android:background="@color/white"
        android:textColorHint="#DFDADA"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textStyle="italic"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/prompt_password"
        android:background="@color/white"
        android:textColorHint="#DFDADA"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textStyle="italic"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username" />


</androidx.constraintlayout.widget.ConstraintLayout>